ucurry/tests/test_suite/negative_test/negative_value1.uc
-- list cannot contain elements of different types 
[1, true, false, "hello"];

